--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,3 +15,23 @@
   z-index: 0;
 }
 
+.about-centered{
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: 'Cute Font', cursive;
+  font-size: 100px;
+  color: white;
+}
+
+.about-paragraph {
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
+  color: white;
+  background-color: lightblue;
+}
