--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
   font-size: 40px;
 }
 
-.navbar-div {
+.navbar {
   background: pink;
 }
 
@@ -32,4 +32,10 @@
   font-family: 'Montserrat', sans-serif;
   font-size: 20px;
   background-color: lightblue;
+}
+
+.fem-welcome {
+  font-family: 'Cute Font', cursive;
+  font-size: 60px;
+  text-align: center;
 }
