--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,6 @@
-
+.background {
+  background-color: pink;
+}
 .navbar-title {
   font-family: 'Cute Font', cursive;
   font-size: 40px;
@@ -24,7 +26,7 @@
 
 .about-centered{
   position: absolute;
-  top: 20%;
+  top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-family: 'Cute Font', cursive;
@@ -35,7 +37,7 @@
 
 .about-paragraph {
   position: absolute;
-  top: 40%;
+  top: 75%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-family: 'Montserrat', sans-serif;
@@ -90,8 +92,8 @@
 
 .list-table-navtabs {
   position: absolute;
-  top: 40%;
-  left: 67%;
+  top: 64%;
+  left: 49%;
   transform: translate(-50%, -10%)
 }
 
@@ -99,9 +101,10 @@
   font-family: 'Cute Font', cursive;
   font-size: 60px;
   text-align: center;
-  padding: 5%;
   position: absolute;
-  top: 30%;
+  padding: 1%;
+  top: 27%;
+  left: 33%;
   background-color: lightblue;
   text-align: center;
   color: white;
