--- a/client/src/App.css
+++ b/client/src/App.css
@@ -113,3 +113,26 @@
   border: dotted;
   border-width: 5px;
 }
+
+.title-table2 {
+  font-family: 'Cute Font', cursive;
+  font-size: 60px;
+  text-align: center;
+  position: absolute;
+  padding: 1%;
+  top: 30%;
+  left: 18%;
+  background-color: lightblue;
+  text-align: center;
+  color: white;
+  text-shadow: 1px 1px #000000;
+  border: dotted;
+  border-width: 5px;
+}
+
+.this-form {
+  position: absolute;
+  top: 58%;
+  left: 49%;
+  transform: translate(-50%, -10%)
+}
